--- a/styles.css
+++ b/styles.css
@@ -327,7 +327,7 @@ header {
 .item-description::after {
 	content: "";
 	clear: both;
-	display: table;
+	display: block;
 }
 
 .item-description > p {
