--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 :root {
 	--header-height: 60px;
 	--footer-height: 54px;
-	--back-button-padding: 30px;
 	--check-total-height: 66px;
 	--check-total-margin: 22px;
 	--alternative-font: "Times New Roman", Times, serif;
@@ -81,7 +80,8 @@ header {
 	background-image: linear-gradient(180deg, #FFFFFF, #F3F3F3);
 	font-size: 25px;
 	font-weight: bold;
-	display: flex;
+	display: grid;
+	grid-template-columns: 1fr auto 1fr;
 	align-items: center;
 	justify-content: space-between;
 	z-index: 1;
@@ -92,11 +92,6 @@ header {
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
-}
-
-
-.title:last-child:not(:first-child) {
-	padding-right: calc(var(--back-button-padding) * 2);
 }
 
 .home {
@@ -170,8 +165,8 @@ header {
 }
 
 .back-button {
-	padding-left: var(--back-button-padding);
-	padding-right: var(--back-button-padding);
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 .filters-button {
