--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ header {
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
+	grid-column-start: 2;
 }
 
 .home {
@@ -173,6 +174,7 @@ header {
 	padding-right: 20px;
 	padding-left: 20px;
 	position: relative;
+	margin-left: auto;
 }
 
 .filters-count {
