--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,12 @@ header {
 	overflow: hidden;
 	white-space: nowrap;
 	grid-column-start: 2;
+	box-sizing: border-box;
+	max-width: 100%;
+}
+
+.title:last-child {
+	padding-right: 20px;
 }
 
 .home {
