--- a/styles.css
+++ b/styles.css
@@ -81,19 +81,24 @@ header {
 	font-size: 25px;
 	font-weight: bold;
 	display: grid;
-	grid-template-columns: 1fr auto 1fr;
+	grid-template-columns: 1fr auto 1fr 0px;
 	align-items: center;
 	justify-content: space-between;
 	z-index: 1;
 }
 
 .title {
-	margin: auto;
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
 	grid-column-start: 2;
 	max-width: 100%;
+}
+
+header::after {
+	content: "";
+	display: block;
+	width: 20px;
 }
 
 .home {
